Fix horizontal scrolling in monospace type section in Emerald Halo

--- a/content/public/css/content-grid.css
+++ b/content/public/css/content-grid.css
@@ -64,6 +64,13 @@
   grid-column: main;
 }
 
+.content-grid>pre.wrapped {
+  grid-column: main;
+  white-space: pre-wrap;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+}
+
 .content-grid > .main-head {
   position: sticky;
   grid-column: main;
